# axum-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  bacon.toml  build.rs  devenv.nix  devenv.yaml  opencode.json  taplo.toml
.sqlx/: query-071bd3eaf844ce5e1af50fa1ba2cc98799f2f3bda3e498de30e96cafacb84180.json  query-1499d08952c6f816e2691e267ef6011649190b8f8ce665269db8ea51d07cc90b.json  query-1b3db0daca6eb30121e7b1f8b00ccd307d5e7bca2b644c7c1f45f1fbbfec57a4.json  query-20687095e09d32413fa6b378482b3c140dc7deb2799e26f64f4ab4c29ce4ba89.json  query-23f276fa3e03a7864868487d5b2b2106f93455af76e656ad1cd239fb54fca434.json  query-2a27ed98fbf276be1d5976c00cff5860672b9eb0c3a7d9da5b3cffe1fb6afbf6.json  query-315a32f081d1e0b4ad96873f3e41e454bcf33145fcedd133b07c02f4a37c38bf.json  query-37809c6a351862991f566ce4697af4c84f582345f7ce5cce62491b769661d457.json  query-37fb1feb6f7c99735c724d920db9e31492b175213b43b70c11c12e55c695a728.json  query-3f4236460ef7c8863c9d537aff20b6b5e9f38e2b233d50f061b798fca68ba952.json  query-4022fc64f78ee61ac7a5f1f592ef73507e35cf624e9e456c7a2237eb8cec8e2d.json  query-45ec33e60fd01adb3c07e843bc0b8ec68353c326ff7bea88f5b9beb6e6086b6b.json  query-4d2b0559379735dfd3f3bb8ecc2e0b24ae3a3bd415f93ac388a8acc1adbaa826.json  query-624b2696be8419e10c5d69f2da255efd693b8a5c78928111507b555c413e3ea2.json  query-62ebf2a82e4b56580410b8f3d7e314a653e1c705b0f3342ae551e082b29da4fa.json  query-691ca8da7161d7c29d9e66e7a8d7190286b7b7568d5ca37b4097922a2c20e37b.json  query-71fa7590ab119eeb30ed3e356b45b6d37548d26b010a200eb98487e8ad5660b8.json  (+36 more)
(+166 files in other folders)
