[package]
name = "project-name"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
garde = { version = "0.22.1", features = ["derive"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "migrate",
  "chrono",
  "uuid",
  "json",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }
